add support for String literal template expressions - basically '$' handles a simple identifier and '${}' handles any valid Java expression for the scope e.g., "The time is $hour o'clock" "Name: ${person.getFirstName()} ${person.getLastName()}" - supports full Java editing/highlighting/completion within string literals

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -65,6 +65,7 @@
     <renamePsiElementProcessor implementation="manifold.ij.extensions.RenameExtensionMethodProcessor" order="first"/>
     <resolveScopeProvider implementation="manifold.ij.extensions.ManResolveScopeProvider" order="first"/>
     <elementDescriptionProvider implementation="manifold.ij.extensions.ManElementDescriptionProvider"/>
+    <languageInjector implementation="manifold.ij.extensions.ManStringLiteralTemplateInjector" order="first"/>
   </extensions>
 
 </idea-plugin>
