--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ String getIjVersion() {
 intellij {
   pluginName project.name
   version getIjVersion() // Ordinarily, just use the version number: '15.0.6' or '2016.3'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
-  plugins = ['ASM Bytecode Outline:0.3.5'] //include ASM in the sandbox by default. Nice.
+  plugins = ['ASM Bytecode Outline:0.3.5', 'Psi Viewer:3.28.93'] //include ASM & PsiViewer in sandbox
 }
 
 runIde {
