--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ configurations.all {
 }
 
 compileJava {
-  options.compilerArgs += ['-proc:none', '-Xplugin:Manifold']
+  options.compilerArgs += ['-proc:none', '-Xplugin:Manifold strings']
 }
 
 String getIjVersion() {
