add an action to create ManTL files from the menu

--- a/src/main/resources/messages/Manifold.properties
+++ b/src/main/resources/messages/Manifold.properties
@@ -10,3 +10,7 @@ new.ext.method.class.dlg.InvalidType=This is not a valid Java qualified name
 error.new.class.dlg.title=Cannot Create Class
 new.ext.method.class.progress.text=Creating Extension class {0}.{1}
 action.create.extended.type=Extended type
+new.template.menu.action.text=ManTL File
+new.template.menu.action.description=Create new ManTL (Manifold Template Language) file
+new.template.progress.text=Creating ManTL file
+new.template.file.action.dialog.title=New ManTL File
