--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -24,6 +24,7 @@
   <actions>
     <group id="Manifold.New">
       <action id="Manifold.NewExtensionClass" class="manifold.ij.actions.CreateExtensionMethodsClassAction"/>
+      <action id="Manifold.NewTemplate" class="manifold.ij.actions.CreateManifoldTemplateAction"/>
       <add-to-group group-id="NewGroup1" anchor="last"/>
     </group>
   </actions>
