--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -76,6 +76,10 @@
          see ManJavaFileHighlighter -->
     <lang.syntaxHighlighterFactory language="JAVA" implementationClass="manifold.ij.extensions.ManJavaSyntaxHighlighterFactory" order="first"/>
 
+    <!-- This enables the ManBuilderService and dynamically configures the classpath (includes manifold-jps-plugin.jar etc.) -->
+    <buildProcess.parametersProvider implementation="manifold.ij.jps.ManBuildClasspathProvider"/>
+    <compileServer.plugin classpath=""/>
+
     <!-- Manifold Template extensions -->
 
     <fileTypeFactory implementation="manifold.ij.template.ManTemplateFileTypeFactory"/>
