Revert "Disable mavenLocal for sane builds"
This reverts commit 184f935

--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,9 @@ configurations {
 
 allprojects {
   repositories {
-//    if(!System.getenv('CI')) {
-//      mavenLocal()
-//    }
+    if(!System.getenv('CI')) {
+      mavenLocal()
+    }
     jcenter()
     maven { url 'https://oss.jfrog.org/artifactory/libs-snapshot' }
   }
