fix breaks from poc changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 version=0.13-SNAPSHOT
-manifoldVersion=0.13-gosu-SNAPSHOT
+manifoldVersion=0.13-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=2017.3.5
+defaultIjVersion=2018.1.2
