--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -50,8 +50,8 @@
 
     <!-- Manifold Core extensions -->
 
-    <projectService serviceInterface="com.intellij.psi.impl.ResolveScopeManager"
-                    serviceImplementation="manifold.ij.extensions.ManResolveScopeManagerImpl" overrides="true"/>
+    <!--<projectService serviceInterface="com.intellij.psi.impl.ResolveScopeManager"-->
+                    <!--serviceImplementation="manifold.ij.extensions.ManResolveScopeManagerImpl" overrides="true"/>-->
 
     <!--<library.type implementation="manifold.ij.extensions.ManLibraryType"/>-->
     <frameworkSupport implementation="manifold.ij.extensions.ManSupportProvider"/>
