- implement ResolveScopeEnlarger instead of ResolveScopeProvider as the extensions' scope may not subsume the scope of the extended type/file - create a union of scopes reflecting the modules that extend a type

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -70,7 +70,7 @@
     <renameHandler implementation="manifold.ij.extensions.ManRenameHandler" order="first"/>
     <renamePsiElementProcessor implementation="manifold.ij.extensions.RenameResourceElementProcessor" order="first"/>
     <renamePsiElementProcessor implementation="manifold.ij.extensions.RenameExtensionMethodProcessor" order="first"/>
-    <resolveScopeProvider implementation="manifold.ij.extensions.ManResolveScopeProvider" order="first"/>
+    <resolveScopeEnlarger implementation="manifold.ij.extensions.ManResolveScopeProvider" order="first"/>
     <elementDescriptionProvider implementation="manifold.ij.extensions.ManElementDescriptionProvider"/>
     <languageInjector implementation="manifold.ij.extensions.ManStringLiteralTemplateInjector" order="first"/>
     <targetElementEvaluator language="TEXT" implementationClass="manifold.ij.extensions.ManTextElementEvaluator"/>
