hard code url to sonatype for snapshots

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ allprojects {
       mavenLocal()
     }
     jcenter()
-    maven { url 'https:/oss.sonatype.org/content/repositories/snapshots/' }
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
   }
 
   apply plugin: 'java'
