--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,15 +4,14 @@
   <description><![CDATA[
     <b><a href="http://manifold.systems/">Manifold</a> support for IntelliJ IDEA.</b><br>
     <br>
-    <p>At its core <a href="https://manifold.systems/">Manifold</a> is a unique framework to dynamically and seamlessly extend
-    Java's type system. Building on this core framework Manifold provides a set of
-    key features found in other programming languages and platforms:</p>
+    <p><a href="https://manifold.systems/">Manifold</a> is a unique framework to dynamically and seamlessly extend
+    Java's type system. Building on this core foundation Manifold provides a set of desirable language features:</p>
     <ul>
     <li><strong>Type-safe Metaprogramming</strong> -- similar in concept to <a href="https://www.microsoft.com/en-us/research/wp-content/uploads/2016/02/information-rich-themes-v4.pdf">F# <em>type providers</em></a></li>
     <li><strong>Extension Methods</strong> -- comparable to the same feature in <a href="https://kotlinlang.org/docs/reference/extensions.html">Kotlin</a> and <a href="https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/classes-and-structs/extension-methods">C#</a></li>
     <li><strong>Structural Typing</strong> -- much like interfaces in <a href="https://www.typescriptlang.org/docs/handbook/interfaces.html">TypeScript</a> and <a href="https://tour.golang.org/methods/10">Go</a></li>
     </ul>
-    <p>Leveraging these key features Manifold delivers a powerful set of Java extensions including <strong>JSON</strong>
+    <p>Through these key features Manifold delivers a powerful set of Java extensions including <strong>JSON</strong>
     integration, <strong>JavaScript</strong> interop, <strong>Structural typing</strong>, seamless <strong>extension libraries</strong> to Java's
     runtime classes, and (coming soon) type-safe access to raw <strong>SQL</strong> and <strong>DDL</strong>.</p>
   ]]></description>
