--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 version=0.23-alpha
-manifoldVersion=0.23-SNAPSHOT
+manifoldVersion=0.23-alpha
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=2018.1.2
+defaultIjVersion=2018.2.4
