--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=0.23-alpha
-manifoldVersion=0.23-alpha
+version=0.24-alpha
+manifoldVersion=0.24-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=2018.2.4
