--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,20 +1,57 @@
 <idea-plugin>
   <id>manifold.ij</id>
   <name>Manifold</name>
-  <description><![CDATA[
-    <b><a href="http://manifold.systems/">Manifold</a> support for IntelliJ IDEA.</b><br>
-    <br>
-    <p><a href="https://manifold.systems/">Manifold</a> is a unique framework to dynamically and seamlessly extend
-    Java's type system. Building on this core foundation Manifold provides a set of desirable language features:</p>
-    <ul>
-    <li><strong>Type-safe Metaprogramming</strong> -- similar in concept to <a href="https://www.microsoft.com/en-us/research/wp-content/uploads/2016/02/information-rich-themes-v4.pdf">F# <em>type providers</em></a></li>
-    <li><strong>Extension Methods</strong> -- comparable to the same feature in <a href="https://kotlinlang.org/docs/reference/extensions.html">Kotlin</a> and <a href="https://docs.microsoft.com/en-us/dotnet/csharp/programming-guide/classes-and-structs/extension-methods">C#</a></li>
-    <li><strong>Structural Typing</strong> -- much like interfaces in <a href="https://www.typescriptlang.org/docs/handbook/interfaces.html">TypeScript</a> and <a href="https://tour.golang.org/methods/10">Go</a></li>
-    </ul>
-    <p>Through these key features Manifold delivers a powerful set of Java extensions including <strong>JSON</strong>
-    integration, <strong>JavaScript</strong> interop, <strong>Structural typing</strong>, seamless <strong>extension libraries</strong> to Java's
-    runtime classes, and (coming soon) type-safe access to raw <strong>SQL</strong> and <strong>DDL</strong>.</p>
-  ]]></description>
+  <description><![CDATA[<div>
+  <div>
+    <h2>What is Manifold?</h2>
+  </div>
+  <div>
+    <p>
+      <a href="http://manifold.systems">Manifold</a> adds impossibly powerful features to Java.  It's just a jar file you add to your project.
+    </p>
+  </div>
+  <div>
+    <h2>How can Manifold improve my project?</h2>
+  </div>
+  <div>
+    <h3><a href="http://manifold.systems/docs.html#manifold-in-a-nutshell">Meta-programming</a></h3>
+    <p>
+      Gain direct, type-safe access to your data. Eliminate code generators. Minimize build time. Enjoy Java again.
+    </p>
+    <code>
+      &nbsp;&nbsp;<b>Person</b>&nbsp;person&nbsp;=&nbsp;<b>Person</b>.fromJsonUrl(url);<br>
+      &nbsp;&nbsp;person.setFirstName("Scott");&nbsp;<i>//&nbsp;JSON Schema support</i>
+    </code>
+  </div>
+  <div>
+    <h3><a href="http://manifold.systems/docs.html#the-extension-manifold">Extensions</a></h3>
+    <p>Add extension methods to existing Java classes, even String, List, and File. Eliminate boilerplate code.</p>
+    <code>
+      &nbsp;&nbsp;<b>String</b>&nbsp;name&nbsp;=&nbsp;"hello";<br>
+      &nbsp;&nbsp;name.myMethod();&nbsp;<i>//&nbsp;customize&nbsp;any&nbsp;type</i>
+    </code>
+  </div>
+  <div>
+    <h3><a href="http://manifold.systems/docs.html#structural-interfaces">Structural Typing</a></h3>
+    <p>Unify disparate APIs. Bridge software components you do not control. Access maps through type-safe
+      interfaces.</p>
+    <code>
+      &nbsp;&nbsp;<b>MyInterface</b>&nbsp;thing&nbsp;=&nbsp;(<b>MyInterface</b>)notMyInterface;<br>
+      &nbsp;&nbsp;thing.myMethod();&nbsp;<i>//&nbsp;treat&nbsp;as&nbsp;your&nbsp;interface</i>
+    </code>
+  </div>
+  <div>
+    <h3><a href="http://manifold.systems/docs.html#templating">Templates</a></h3>
+    <p>Make type-safe, templatized data files using pure Java. Use template expressions in strings:</p>
+    <code>
+      &nbsp;&nbsp;<b>int</b>&nbsp;hour&nbsp;=&nbsp;<i>8</i>;<br>
+      &nbsp;&nbsp;<b>String</b>&nbsp;time&nbsp;=&nbsp;"It&nbsp;is&nbsp;<b>$</b><i>hour</i>&nbsp;o'clock";&nbsp;<i>//&nbsp;"It&nbsp;is&nbsp;8&nbsp;o'clock"</i>
+    </code>
+  </div>
+  <div>
+    <h3><a href="http://manifold.systems/docs.html">Learn More</a></h3>
+  </div>
+</div>]]></description>
   <version>This value is patched by the build script</version>
   <vendor email="admin@manifold.systems" url="http://manifold.systems">manifold.systems</vendor>
   <!-- please see http://confluence.jetbrains.com/display/IDEADEV/Build+Number+Ranges for description -->
