update plugin description

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,57 +1,81 @@
 <idea-plugin>
   <id>manifold.ij</id>
   <name>Manifold</name>
-  <description><![CDATA[<div>
-  <div>
-    <h2>What is Manifold?</h2>
-  </div>
-  <div>
-    <p>
-      <a href="http://manifold.systems">Manifold</a> adds impossibly powerful features to Java.  It's just a jar file you add to your project.
-    </p>
-  </div>
-  <div>
-    <h2>How can Manifold improve my project?</h2>
-  </div>
-  <div>
-    <h3><a href="http://manifold.systems/docs.html#manifold-in-a-nutshell">Meta-programming</a></h3>
-    <p>
-      Gain direct, type-safe access to your data. Eliminate code generators. Minimize build time. Enjoy Java again.
-    </p>
-    <code>
-      &nbsp;&nbsp;<b>Person</b>&nbsp;person&nbsp;=&nbsp;<b>Person</b>.fromJsonUrl(url);<br>
-      &nbsp;&nbsp;person.setFirstName("Scott");&nbsp;<i>//&nbsp;JSON Schema support</i>
-    </code>
-  </div>
-  <div>
-    <h3><a href="http://manifold.systems/docs.html#the-extension-manifold">Extensions</a></h3>
-    <p>Add extension methods to existing Java classes, even String, List, and File. Eliminate boilerplate code.</p>
-    <code>
-      &nbsp;&nbsp;<b>String</b>&nbsp;name&nbsp;=&nbsp;"hello";<br>
-      &nbsp;&nbsp;name.myMethod();&nbsp;<i>//&nbsp;customize&nbsp;any&nbsp;type</i>
-    </code>
-  </div>
-  <div>
-    <h3><a href="http://manifold.systems/docs.html#structural-interfaces">Structural Typing</a></h3>
-    <p>Unify disparate APIs. Bridge software components you do not control. Access maps through type-safe
-      interfaces.</p>
-    <code>
-      &nbsp;&nbsp;<b>MyInterface</b>&nbsp;thing&nbsp;=&nbsp;(<b>MyInterface</b>)notMyInterface;<br>
-      &nbsp;&nbsp;thing.myMethod();&nbsp;<i>//&nbsp;treat&nbsp;as&nbsp;your&nbsp;interface</i>
-    </code>
-  </div>
-  <div>
-    <h3><a href="http://manifold.systems/docs.html#templating">Templates</a></h3>
-    <p>Make type-safe, templatized data files using pure Java. Use template expressions in strings:</p>
-    <code>
-      &nbsp;&nbsp;<b>int</b>&nbsp;hour&nbsp;=&nbsp;<i>8</i>;<br>
-      &nbsp;&nbsp;<b>String</b>&nbsp;time&nbsp;=&nbsp;"It&nbsp;is&nbsp;<b>$</b><i>hour</i>&nbsp;o'clock";&nbsp;<i>//&nbsp;"It&nbsp;is&nbsp;8&nbsp;o'clock"</i>
-    </code>
-  </div>
-  <div>
-    <h3><a href="http://manifold.systems/docs.html">Learn More</a></h3>
-  </div>
-</div>]]></description>
+  <description>
+    <![CDATA[
+      <div>
+        <div>
+          <h2>What is Manifold?</h2>
+        </div>
+        <div>
+          <p>
+            <a href="http://manifold.systems">Manifold</a> is a revolutionary new breed of Java tooling. It provides powerful
+            features to make Java development more appealing and productive. Simply add the Manifold jar to your project and
+            begin taking advantage of it.
+          </p>
+        </div>
+        <div>
+          <h2>What can you do with Manifold?</h2>
+        </div>
+        <div>
+          <h3><a href="http://manifold.systems/docs.html#manifold-in-a-nutshell">Meta-programming</a></h3>
+          <p>
+            Gain direct, type-safe access to structured data. Eliminate code generators. Minimize build time.
+          </p>
+          <code>
+            &nbsp;&nbsp;<i>//&nbsp;JSON files are types!</i><br>
+            &nbsp;&nbsp;<b>Person</b>&nbsp;person&nbsp;=&nbsp;<b>Person</b>.fromJsonUrl(url);<br>
+            &nbsp;&nbsp;person.setFirstName("Scott");
+          </code>
+        </div>
+        <div>
+          <h3><a href="http://manifold.systems/docs.html#the-extension-manifold">Extensions</a></h3>
+          <p>Add extension methods and interfaces to existing Java classes, even String, List, and File. Eliminate boilerplate
+            code.</p>
+          <code>
+            &nbsp;&nbsp;<b>String</b>&nbsp;greeting&nbsp;=&nbsp;"hello";<br>
+            &nbsp;&nbsp;greeting.myMethod();&nbsp;<i>//&nbsp;augment&nbsp;any&nbsp;type</i>
+          </code>
+        </div>
+        <div>
+          <h3><a href="http://manifold.systems/docs.html#structural-interfaces">Structural Typing</a></h3>
+          <p>Unify disparate APIs. Bridge software components you do not control. Access maps through type-safe
+            interfaces.</p>
+          <code>
+            &nbsp;&nbsp;<b>MyInterface</b>&nbsp;thing&nbsp;=&nbsp;(<b>MyInterface</b>)notMyInterface;<br>
+            &nbsp;&nbsp;thing.myMethod();&nbsp;<i>//&nbsp;treat&nbsp;as&nbsp;your&nbsp;interface</i>
+          </code>
+        </div>
+        <div>
+          <h3><a href="http://manifold.systems/docs.html#templating">Templates</a></h3>
+          <p>Make type-safe, templatized data files using pure Java. Use the same template expressions in Java strings:</p>
+          <code>
+            &nbsp;&nbsp;<b>int</b>&nbsp;hour&nbsp;=&nbsp;<i>8</i>;<br>
+            &nbsp;&nbsp;<i>//&nbsp;"It&nbsp;is&nbsp;8&nbsp;o'clock"</i><br>
+            &nbsp;&nbsp;<b>String</b>&nbsp;time&nbsp;=&nbsp;"It&nbsp;is&nbsp;<b>$</b><i>hour</i>&nbsp;o'clock";&nbsp;
+          </code>
+        </div>
+        <div>
+          <h3><a href="http://manifold.systems/docs.html#extension-libraries">Libraries</a></h3>
+          <p>Leverage stock Manifold extension libraries for standard Java classes. Save time and reduce boilerplate code.</p>
+          <code>
+            &nbsp;&nbsp;<b>File</b>&nbsp;file&nbsp;=&nbsp;new <b>File</b>(path);<br>
+            &nbsp;&nbsp;<i>//&nbsp;Use refreshing extensions to File</i><br>
+            &nbsp;&nbsp;<b>String</b>&nbsp;content&nbsp;=&nbsp;file.readText();&nbsp;
+          </code>
+        </div>
+        <div>
+          <h3><a href="http://manifold.systems/docs.html#working-with-intellij">IntelliJ</a></h3>
+          <p>Use the Manifold IntelliJ IDEA plugin to fully leverage Manifold in your development cycle. The plugin provides
+            comprehensive support for IntelliJ features including code completion, navigation, usage searching, refactoring,
+            incremental compilation, hotswap debugging, full-featured template editing, and more.</p>
+        </div>
+        <div>
+          <h3><a href="http://manifold.systems/docs.html">Learn More</a></h3>
+        </div>
+      </div>
+    ]]>
+  </description>
   <version>This value is patched by the build script</version>
   <vendor email="admin@manifold.systems" url="http://manifold.systems">manifold.systems</vendor>
   <!-- please see http://confluence.jetbrains.com/display/IDEADEV/Build+Number+Ranges for description -->
