Regardless of full rebuild or incremental build, avoid statically compiling a manifold type that is not referenced elsewhere in the compilation scope. - this change applies to builds using IIncrementalCompileDriver such as IJ JPS plugin - note @Precompile can still be used to force static compilation of any number of manifold types

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 version=0.25-alpha
 manifoldVersion=0.25-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=2018.2.4
+defaultIjVersion=LATEST-EAP-SNAPSHOT
