detect and warn about a project using an older version of manifold than the plugin uses

--- a/build.gradle
+++ b/build.gradle
@@ -81,7 +81,7 @@ String getIjVersion() {
 }
 
 intellij {
-  alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA Community Edition 2017.3.4'
+  //alternativeIdePath = 'C:\\Program Files\\JetBrains\\IntelliJ IDEA Community Edition 2017.3.4'
   pluginName project.name
   version getIjVersion() // Ordinarily, just use the version number: '15.0.6' or '2016.3'. Alternatively, the precise API level is OK too: 'IC-143.2370.31'
   //plugins = ['Psi Viewer:3.28.93'] //include ASM & PsiViewer in sandbox
