--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 version=0.26-alpha
 manifoldVersion=0.27-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2018.2.5
