Fix https://github.com/manifold-systems/manifold/issues/24 - Create the FileModificationManager lazily to handle the case where another ij plugin e.g., lombok, is called first with projectOpened() and indirectly accesses a ManProject.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=0.26-alpha
-manifoldVersion=0.27-SNAPSHOT
+version=0.27-alpha
+manifoldVersion=0.27-alpha
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=2018.2.5
