Self type support

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-version=0.27-alpha
-manifoldVersion=0.27-alpha
+version=0.28-alpha
+manifoldVersion=0.28-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=2018.2.5
+defaultIjVersion=LATEST-EAP-SNAPSHOT
