--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
-version=0.28-alpha
-manifoldVersion=0.28-SNAPSHOT
+version=0.30-alpha
+manifoldVersion=0.30-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=LATEST-EAP-SNAPSHOT
+#defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2018.2.4
